--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,13 @@
         "ranges": "cpp",
         "__config": "cpp",
         "__nullptr": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "__cxx_version": "cpp",
+        "__tree": "cpp",
+        "functional": "cpp",
+        "map": "cpp",
+        "type_traits": "cpp",
+        "system_error": "cpp"
     },
     "C_Cpp.dimInactiveRegions": false
 }
